Saving new entry 2016-09-07-17-50-09

--- a/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
+++ b/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
@@ -78,4 +78,62 @@ Good times!
 
 ## 3.  `document.write` is synchronous
 
-Because we can't defer `document.write` to after the document is done loading, all the `document.write` code *has* to run as part of the initial page load, and so anything it puts in your document increases time-to-load. If you are blessed enough to live in a part of the world where you've never noticed page load speed is
+Because we can't defer `document.write` to after the document is done loading, all the `document.write` code *has* to run as part of the initial page load, and so anything it puts in your document increases time-to-load. If you are blessed enough to live in a part of the world where you've never noticed page load speed, good for you! But a *lot* of people are still on slow connections, and any page blocking before the browser can show an initial view (which it only does once it reaches the `</body>` tag) is extremely obvious.
+
+## Okay, fine, but say I know all these things, why do I suck at JavaScript if I use it? I know what I'm doing!
+
+I'm going to  argue that you don't. Modern JS has many constructions that are non-destructive, secure, and non-blocking. Why not use those instead?
+
+### adding content to the document
+
+The proper way to add content to your document, using modern, non-destructive code, is by using the DOM manipulation API. In vanilla JS, things like this:
+
+```
+<html>
+  <head><title>whatever</title></head>
+  <body>
+    <h1>Second test:</h1>
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+        var body = document.body.
+        var p = document.createElement("p");
+        p.textContent = "wow, a new paragraph!";
+        body.appendChild(p);
+      });
+    </script>
+  </body>
+</html>
+```
+Is that cumbersome? Sure is, so if you have to manipulate the DOM, use something like jQuery or Zepto or the like instead, because they give you far easier APIs, while making sure to fall through to proper DOM manipulation instead of `document.write`:
+
+```
+<html>
+  <head><title>whatever</title></head>
+  <body>
+    <h1>Second test:</h1>
+    <script>
+      $(function() {
+        $(document.body).append($("<p>Wow, a new paragraph!</p>");
+      });
+    </script>
+  </body>
+</html>
+```
+
+Done.  And it runs asynchronous, too, so your page isn't blocked from loading.
+
+### I use `document.write` to see debug information!
+
+Okay... wait, what? Why are you doing that? It's 2016, but even if this was 2010: use the `console` API, because that's what it for.
+
+You open your browser's dev tools view, and you use `console.log(...)` to write data to the dev tools console. In fact, unlike `document.write` which can only write strings (obviously), `console.log` can write *everything*. Strings, arrays, full objects, it makes all those things accessible in the console in an explorable way. In fact, it even has `console.warn()` and `console.error()`, so you can be specific about what your debug is for (just "see the data" vs "strong signal that something's wrong").
+
+### I use it for-
+
+I kind of stopped caring: whatever you're doing, there is a modern JS way to do that without using **a bare-bones byte injection function hooked into the normally inaccessible document byte map**. 
+
+# Do you *really* suck at JavaScript? Probably not.
+
+So back to the original proposition. Do you suck at JavaScript? Well, sort of. You're using a function you shouldn't ever have been taught to use. That happens. We all started at a position of "knowing nothing about JavaScript", so not knowing how bad `document.write` is, is kind of a given. However, now you know, and now you need to go and find all those places where you use it.
+
+So only to all of you who don't stop using `document.write`: you absolutely suck at JavaScript, and the world is worse off because of you. Shape up, and help everyone learn better JS by writing better JS. You have the skills and the power, exercise them.
