Saving new entry 2016-09-07-17-50-09

--- a/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
+++ b/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
@@ -72,7 +72,10 @@ If you know why `eval()` is bad, you should already see where this is going, but
 and let's put a `document.write` in that "perfectly safe" js file!
 
 ```
-document.write("<script> do.anything(); /* this runs as if it's part of your page now, not scoped to third.party.domain */ </script>");
+// awesome,  this injected code will run as if it's part of the page this is run on,
+// not our http://third.party.domain context, so it will have access to everything
+// security related that we shouldn't ever have access to!
+document.write("<script> do.anything(); </script>");
 ```
 Good times!
 
