Saving new entry 2016-09-07-17-50-09

--- a/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
+++ b/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
@@ -45,7 +45,9 @@ Want to guess what that does? Writes a paragraph into the document once it's fin
   </body>
 </html>
 ```
-*Where did that `<h1>` go?*
+Run this code. Seriously, hit up [jsbin](https://jsbin.com) and paste that into the HTML section, then run it. See what happens.
+
+*Huh, where did that `<h1>` go?*
 
 Actually, the correct question is "where did **everything** go?" because your entire document got wiped. After all, `document.write` needs an open pipe, and there is no open pipe once all content has loaded. And so it makes one.
 
