Saving new entry 2016-09-07-17-50-09

--- a/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
+++ b/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
@@ -61,7 +61,7 @@ So congratulations, you just wiped the page! And this is not a "quirk", this is 
 
 ## 2.  `document.write` is insanely insecure.
 
-If you know why `eval()` is bad, you should already see where this is going, but `document.write` is the most low-level version of eval you can come up with: it's *literally* the function for injecting data into a page, so let's do that:
+You probably know that `eval()` is really bad because it can evaluate arbitrary JS code, with the same execution rights as the page it's run on. So... you should see this one coming, but `document.write` lets you do exactly the same thing. In fact, it's the most low-level version of eval you can come up with: it's *literally* the function for injecting data into a page, so let's do that...
 
 ```
 <html>
