Saving new entry 2016-09-07-17-50-09

--- a/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
+++ b/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
@@ -89,9 +89,11 @@ Because we can't defer `document.write` to after the document is done loading, a
 
 ## Okay, fine, but say I know all these things, why do I suck at JavaScript if I use it? I know what I'm doing!
 
-I'm going to  argue that you don't. Modern JS has many constructions that are non-destructive, secure, and non-blocking. Why not use those instead?
+I'm going to  argue that you don't. Modern JS has many constructions that are non-destructive, secure, and non-blocking. Why not use those instead? And that's a rhetorical question, really: you *should* be using the modern JS equivalents, not a low-level document bytecode writer. It doesn't really matter what you want to do, because I know what you don't want to do: you don't want to "write byte data into the document", you want to do something else, so: use the appropriate APIs to do that thing, don't resort to `document.write` as some kind of magical hammer: you're abusing `document.write` to do something it's not designed to do, in a way that is horrendously broken and bug-prone.
 
-### adding content to the document
+So what do you use instead?
+
+### Adding content to the document
 
 The proper way to add content to your document, using modern, non-destructive code, is by using the DOM manipulation API. In vanilla JS, things like this:
 
@@ -138,6 +140,12 @@ You open your browser's dev tools view, and you use `console.log(...)` to write 
 ### I use it for-
 
 I kind of stopped caring: whatever you're doing, there is a modern JS way to do that without using **a bare-bones byte injection function hooked into the normally inaccessible document byte map**. 
+
+### No really, I'm using it for injecting a filesystem loader into an iframe that kicks in before the document even exists, replacing it with a POSIX filesystem-enabled mini server that--
+
+That sounds awesome, and a super cool hack. I hope you're not counting on that working forever, because `document.write` has to go, and your creative super-ninja ninche way to use it is not enough to justify it sticking around for much longer.
+
+Seriously: *`document.write` has to go.*
 
 # Do you *really* suck at JavaScript? Probably not.
 
