Saving new entry 2016-09-07-17-50-09

--- a/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
+++ b/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
@@ -143,7 +143,7 @@ I kind of stopped caring: whatever you're doing, there is a modern JS way to do 
 
 ### No really, I'm using it for injecting a filesystem loader into an iframe that kicks in before the document even exists, replacing it with a POSIX filesystem-enabled mini server that--
 
-That sounds awesome, and a super cool hack. I hope you're not counting on that working forever, because `document.write` has to go, and your creative super-ninja ninche way to use it is not enough to justify it sticking around for much longer.
+That sounds awesome, I did the same thing! Also, that's an amazeballs super-ninja insane-o-hack, so I hope you're not counting on that working forever, because `document.write` has to go. No matter how neat the thing is we can achieve by abusing the hell out of it. Our exploits of it are not enough to justify keeping it around.
 
 Seriously: *`document.write` has to go.*
 
