Saving new entry 2016-09-07-17-50-09

--- a/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
+++ b/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
@@ -2,7 +2,7 @@ Wow, that's an incendiary post title isn't it. Just because you use `document.wr
 
 ## Let's start at the start
 
-The `document.write` function comes to us from the dark ages of the early JavaScript enabled web, and is really nothing like the JS you are likely to be familiar with.  It might be called `document.write` and invoked as if it's part of the document API, [its true behaviour is much lower level](https://developer.mozilla.org/en-US/docs/Web/API/Document/write): it is a proxy function in to the bytesteam pipe that defines what's even **in** in `document`. The `write` function doesn't let you "write some data into the document", it **is** the document, and that comes with some hilarious side effects.
+The `document.write` function comes to us from the dark ages of the early JavaScript enabled web, and is really nothing like the JS you are likely to be familiar with.  It might be called `document.write` and invoked as if it's part of the document API, [its true behaviour is much lower level](https://developer.mozilla.org/en-US/docs/Web/API/Document/write): it is a proxy function in to the bytesteam pipe that defines what's even **in** your `document`. The `write` function doesn't let you "write some data into the document", it **is** the document, and that comes with some hilarious side effects.
 
 ## 1: `write` needs an open pipe
 
