Saving new entry 2016-09-07-17-50-09

--- a/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
+++ b/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
@@ -15,7 +15,11 @@ Say you have a web page, and that webpage has the following code:
   </body>
 </html>
 ```
-then you might expect this to write a paragraph at the time the script triggers. And you'd be right, but here is *why* you're right: the document pipe is still open, and the script element gets evaluated *while* the document is getting parsed. Want to see something hilarious:
+The browser loads this code by creating a `document`, opening it for writing, piping that data into it (which gets parsed into a DOM as it sees bytes flying by) and then closes it to signal the completion of building [the DOM](https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model) for your page.
+
+Given that, you might expect this code to write a paragraph into your document at the time that the `document.write` script triggers. And you'd be right, but here is *why* you're right: as the document pipe is still open, and the script element gets evaluated *while* the document is getting parsed, the document parser simply sees "more bytes" flying by to parse into the DOM.
+
+Want to see something hilarious?
 
 ```
 <html>
