Saving new entry 2016-09-07-17-50-09

--- a/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
+++ b/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
@@ -34,7 +34,7 @@ Want to see something hilarious?
 </html>
 ```
 
-Want to guess what that does? Writes a paragraph into the document once it's finished loading? **no, not really**. Sure, if you put this in jsbin or the like that's what it looks like it does, but let's try this:
+Guess what that does. If you thought "it writes a paragraph into the document once it's finished loading" then: no, not really.  While it might look that way if you put this in jsbin or the like that's what it looks like it does, but let's try this:
 
 ```
 <html>
@@ -61,7 +61,9 @@ A new one.
 
 **`document` is now an empty, open data pipe**
 
-So congratulations, you just wiped the page! And this is not a "quirk", this is literally what it's supposed to do, it's intended and explicit behaviour. If this was code you wrote on your own page, then lucky you, easy to fix (don't use `document.write`) but if this was a 3rd party library, good luck finding out which one is  responsible. And then replacing it with a modern library instead.
+What happened? The document got opened, the source code bytes went flying past the parser, it saw the end of the document, the document got closed for writing, and then when it sends the signal "DOM finished building!", our `document.write` code kicks in, and the document is reopened as a new, empty, byte stream, and we pump in only the bytes `<p>oh look a paragraph</p>`. The browser knows how to auto-inject missing tags so it'll automatically build the higher level `html`, `head` and `body` nodes in the DOM, but the *only* data in our document as far as the browser knows is now `<p>oh look a paragraph</p>`, and **nothing else**.
+
+So congratulations, you actually just wiped the page! And this is not a "quirk", this is literally what it's supposed to do, it's intended and explicit behaviour. If this was code you wrote on your own page, then lucky you, easy to fix (don't use `document.write`) but if this was a 3rd party library, good luck finding out which one is  responsible. And then replacing it with a modern library instead.
 
 ## 2.  `document.write` is insanely insecure.
 
