Saving new entry 2016-09-07-17-50-09

--- a/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
+++ b/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
@@ -97,7 +97,9 @@ Because we can't defer `document.write` to after the document is done loading, a
 
 I'm going to  argue that you don't. Not necessarily through any fault of your own, but you don't.
 
-Modern JS has many constructions that are non-destructive, secure, and non-blocking. Why not use those instead? And that's a rhetorical question, really: you *should* be using the modern JS equivalents, not a low-level document bytecode writer. It doesn't really matter what you want to do, because I know what you don't want to do: you don't want to "write byte data into the document", you want to do something else, so: use the appropriate APIs to do that thing, don't resort to `document.write` as some kind of magical hammer: you're abusing `document.write` to do something it's not designed to do, in a way that is horrendously broken and bug-prone.
+Modern JS has many constructions that are non-destructive, secure, and non-blocking. Why not use those instead? And that's a rhetorical question, really: you *should* be using the modern JS equivalents, not a low-level document bytecode writer. It doesn't really matter what you want to do, because I know what you don't want to do: you don't want to "write byte data into the document", you want to do something else.
+
+As such, like any proper solution to [an XY problem](http://meta.stackexchange.com/questions/66377/what-is-the-xy-problem), solve the right problem with the right tools. In this case, do what you *actually* want to get done using the appropriate modern APIs for doing that thing; don't resort to `document.write` as some kind of magical hammer, because then you're just abusing `document.write` to do something it wasn't designed to do, in a way that is horrendously broken and bug-prone.
 
 So what do you use instead?
 
