Saving new entry 2016-09-07-17-50-09

--- a/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
+++ b/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
@@ -95,7 +95,7 @@ Because we can't defer `document.write` to after the document is done loading, a
 
 ## Okay, fine, but say I know all these things, why do I suck at JavaScript if I use it? I know what I'm doing!
 
-I'm going to  argue that you don't. Not necessarily through any fault of your own, but you don't.
+I'm going to  argue that you don't. Not necessarily through any fault of your own, but you can still suck at something even if you don't realise you do.
 
 Modern JS has many constructions that are non-destructive, secure, and non-blocking. Why not use those instead? And that's a rhetorical question, really: you *should* be using the modern JS equivalents, not a low-level document bytecode writer. It doesn't really matter what you want to do, because I know what you don't want to do: you don't want to "write byte data into the document", you want to do something else.
 
