Saving new entry 2016-09-07-17-50-09

--- a/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
+++ b/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
@@ -141,7 +141,7 @@ Is that cumbersome? Sure is, so if you have to manipulate the DOM, use something
 
 Done.  And it runs asynchronous, too, so your page isn't blocked from loading.
 
-### I use `document.write` to see debug information!
+### But I only use `document.write` to see debug information!
 
 Okay... wait, what? Why are you doing that? It's 2016, but even if this was 2010: use the `console` API, because that's what it for.
 
