Saving new entry 2016-09-07-17-50-09

--- a/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
+++ b/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
@@ -143,7 +143,7 @@ Done.  And it runs asynchronous, too, so your page isn't blocked from loading.
 
 ### But I only use `document.write` to see debug information!
 
-Okay... wait, what? Why are you doing that? It's 2016, but even if this was 2010: use the `console` API, because that's what it for.
+Okay... wait, what? Why are you doing that? It's 2016, but even if this was 2010: use the `console` API, because that's what it's for.
 
 You open your browser's dev tools view, and you use `console.log(...)` to write data to the dev tools console. In fact, unlike `document.write` which can only write strings (obviously), `console.log` can write *everything*. Strings, arrays, full objects, it makes all those things accessible in the console in an explorable way. In fact, it even has `console.warn()` and `console.error()`, so you can be specific about what your debug is for (just "see the data" vs "strong signal that something's wrong").
 
