Saving new entry 2016-09-07-17-50-09

--- a/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
+++ b/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
@@ -145,9 +145,13 @@ Done.  And it runs asynchronous, too, so your page isn't blocked from loading.
 
 Okay... wait, what? Why are you doing that? It's 2016, but even if this was 2010: use the `console` API, because that's what it's for.
 
-You open your browser's dev tools view, and you use `console.log(...)` to write data to the dev tools console. In fact, unlike `document.write` which can only write strings (obviously), `console.log` can write *everything*. Strings, arrays, full objects, it makes all those things accessible in the console in an explorable way. In fact, it even has `console.warn()` and `console.error()`, so you can be specific about what your debug is for (just "see the data" vs "strong signal that something's wrong").
+You open your browser's dev tools view, and you use `console.log(...)` to write data to the dev tools console. In fact, unlike `document.write` which can only write strings (obviously), `console.log` can write everything you throw at it, and can write as many things as you need written in a single command. Strings, arrays, full objects, it makes all those things accessible in the console in an explorable way, and in a single call: `console.log("test", [1,2,3], {x:0,y:undefined})` just works.
 
-### I use it for-
+In fact, because being explicit about your intent in code is important for your code to make sense not just to others but even to your future self, the console API even has things like `console.warn()` and `console.error()`, so you can be specific about what your debug is for (just "see the data" vs "strong signal that something's wrong"). And if you want to get *really* fancy there's things like `console.table()` for pretty-printing specific data in tabulated form. 
+
+The console is amazing and you should be using it. Not `document.write`.
+
+### I use it for--
 
 I kind of stopped caring: whatever you're doing, there is a modern JS way to do that without using **a bare-bones byte injection function hooked into the normally inaccessible document byte map**. 
 
