Saving new entry 2016-09-07-17-50-09

--- a/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
+++ b/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
@@ -151,7 +151,7 @@ In fact, because being explicit about your intent in code is important for your 
 
 The console is amazing and you should be using it. Not `document.write`.
 
-### I use it for--
+### But what if I use it for--
 
 I kind of stopped caring: whatever you're doing, there is a modern JS way to do that without using **a bare-bones byte injection function hooked into the normally inaccessible document byte map**. 
 
