--- a/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
+++ b/gh-weblog-2/content/posts/markdown/2016-09-07-17-50-09.md
@@ -165,8 +165,8 @@ Seriously: *`document.write` has to go.*
 
 So back to the original proposition. Do you suck at JavaScript? Well, sort of. You're using a function you shouldn't ever have been taught to use. That happens. We all started at a position of "knowing nothing about JavaScript", so not knowing how bad `document.write` is, is kind of a given. However, now you know, and now you need to go and find all those places where you use it.
 
-So do you suck at JavaScript? That depends on what you do next: if you who don't stop using `document.write` now, and you don't go an correct your past mistakes, then yes; you absolutely suck at JavaScript, and the world is worse off because of you.
+And then do you suck at JavaScript? Well, that depends on what you do next: if you don't stop using `document.write` now, and you don't go an correct your past mistakes, then yes; you absolutely suck at JavaScript, and the web world is worse off because of you. No two ways about it: if that's you, you're part of the problem. And not even because of <code>document.write</code> anymore but because you are unwilling to fix obviously bad behaviour. You have problems well outside of writing JavaScript.
 
-Shape up, and help everyone learn better JS by writing better JS. You have the skills and the power, exercise them.
+So shape up, and help everyone learn better JS by writing better JS. You have the skills and the power, exercise them, make a diffrence.
 
-And to all of you already avoiding `document.write` like the low-level legacy function that it is: good on you, keep up the good work. Maybe convince a friend to do the same, together we can fix the web.
+And to all of you already avoiding `document.write` like the low-level legacy function that it is: good on you, keep up the good work. Maybe convince a friend to do the same, tweet about it, write a blog post; together we can fix the web.
